--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,25 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-a{
+
+a {
   text-decoration: none !important;
 }
-.form_section{
+ul{
+  list-style: none;
+  padding-left: 0 !important;
+}
+.form_section {
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.form_section form{
+
+.form_section form {
   max-width: 800px;
   border: 8px;
   display: flex;
@@ -21,13 +27,128 @@ a{
   padding: 40px 90px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
-.form_section form input{
+
+.form_section form input {
   padding: 5px 10px;
   margin: 10px 0;
   border-radius: 5px;
   border: 1px solid #595959;
 }
-.form_section form button{
+
+.form_section form button {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.topbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 15px;
+  text-align: right;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  z-index: 20;
+  background-color: #fff;
+}
+
+.topbar p {
+  margin-bottom: 0;
+  padding-right: 2rem;
+}
+
+.topbar p span {
+  font-weight: 600;
+}
+
+.navigation {
+  width: 14rem;
+  height: 100vh;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 30;
+  padding-top: 6rem;
+  box-shadow: 4px 0px 12px rgba(0, 0, 0, 0.1);
+}
+
+.navigation .pc_nav {
+  padding-left: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.navigation .pc_nav a {
+  font-size: 1.2rem;
+  color: #3e3e3e;
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.navigation .pc_nav a svg {
+  margin-right: 10px;
+}
+
+.navigation .pc_nav a.active {
+  color: #9e9e9e;
+
+}
+.navigation .mob_nav a.active {
+  color: #9e9e9e;
+}
+.navigation .mob_nav a {
+  color: #3e3e3e;
+}
+
+.navigation .mob_nav {
+  display: none;
+}
+
+.content {
+  padding-top: 5rem;
+  padding-left: 16rem;
+  margin-right: 2rem;
+}
+.card{
+  margin-top: 2rem;
+}
+
+@media only screen and (max-width: 500px) {
+  .content {
+    padding-left: 15px;
+    margin-right: 15px;
+  }
+  .navigation {
+    width: 100%;
+    padding: 0 80px;
+    padding: 0;
+    height: 4rem;
+    left: 0;
+    box-shadow: none;
+    top: unset;
+    bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .navigation .mob_nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 90%;
+    height: 100%;
+    padding: 15px 10px;
+    box-shadow: 4px 0px 12px rgba(0, 0, 0, 0.247);
+    border-radius: 1rem;
+  }
+
+  .navigation .pc_nav {
+    display: none;
+  }
 }
