ui product details

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ ul{
   padding-top: 5rem;
   padding-left: 16rem;
   margin-right: 2rem;
+  padding-bottom: 3rem;
 }
 .card{
   margin-top: 2rem;
